@@ -3,17 +3,11 @@ Section: python
 Priority: optional
 Maintainer: Jeremy T. Bouse <jbouse@debian.org>
 Uploaders: Guido Guenther <agx@debian.org>
-X-Python-Version: >= 2.6
-X-Python3-Version: >= 3.2
 Build-Depends: debhelper (>> 9),
 	python-all (>= 2.6.6-3~),
 	python-crypto (>= 2.1.0-2),
 	python-pyasn1,
 	python-setuptools,
-	python3-all,
-	python3-crypto,
-	python3-pyasn1,
-	python3-setuptools
 Standards-Version: 3.9.7
 Homepage: https://github.com/paramiko/paramiko/
 Vcs-Git: https://github.com/jbouse-debian/paramiko.git
@@ -33,18 +27,3 @@ Description: Make ssh v2 connections with Python (Python 2)
  are supported.  SFTP client and server mode are both supported too.
  .
  This is the Python 2 version of the package.
-
-Package: python3-paramiko
-Package-Type: deb
-Architecture: all
-Depends: python3-crypto (>= 2.1.0-2),
-	${misc:Depends},
-	${python3:Depends}
-Provides: ${python3:Provides}
-Description: Make ssh v2 connections with Python (Python 3)
- This is a library for making SSH2 connections (client or server).
- Emphasis is on using SSH2 as an alternative to SSL for making secure
- connections between Python scripts.  All major ciphers and hash methods
- are supported.  SFTP client and server mode are both supported too.
- .
- This is the Python 3 version of the package.
