@@ -4,6 +4,7 @@ paramiko (1.16.0-2~precise0+exo1) precise; urgency=medium
     + Drop dependency on python-ecdsa.
     + Don't use dh-python for build.
     + Don't install documentation.
+    + Don't build for Python 3 (pyasn1 not available).
 
  -- Vincent Bernat <bernat@debian.org>  Fri, 17 Jun 2016 16:55:17 +0200
 
